# acquire-common

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/: build.yml  release.yml
.github/workflows/: release.yml  test.yml
acquire-core-libs/: CMakeLists.txt
acquire-core-libs/tests/: file-create-behavior.cpp  instance-types.cpp  unit-tests.cpp
acquire-driver-common/: CMakeLists.txt
acquire-driver-common/src/simcams/: simulated.camera.c
acquire-driver-common/src/storage/: raw.c  side-by-side-tiff.cpp  tiff.cpp
acquire-driver-common/tests/devkit/: CMakeLists.txt  can-load-driver-interface.cpp  list-devices.cpp  storage-get-meta.cpp  unit-tests.cpp
acquire-driver-common/tests/integration/: CMakeLists.txt  abort-while-waiting-for-trigger.cpp  can-set-with-file-uri.cpp  configure-triggering.cpp  identifier-reported-in-metadata.cpp  list-digital-lines.cpp  simcam-will-not-stall.cpp  switch-storage-identifier.cpp  (+2 more)
acquire-video-runtime/: CMakeLists.txt
acquire-video-runtime/src/: CMakeLists.txt  acquire.c
acquire-video-runtime/tests/: CMakeLists.txt  abort-or-stop.cpp  aligned-videoframe-pointers.cpp  change-external-metadata.cpp  change-file-name.cpp  client-queue-is-flushed-after-abort.cpp  configure-after-shutdown-and-reinitialize.cpp  default-devices.cpp  device-selection.cpp  filter-video-average.cpp  list-devices.cpp  no-abort-on-dropped-frames.cpp  one-video-stream.cpp  repeat-start-no-monitor.cpp  repeat-start-no-stop.cpp  repeat-start.cpp  sleep-while-inspecting.cpp  two-video-streams.cpp  unit-tests.cpp  zero-config-start.cpp
tests/: CMakeLists.txt
(+14 files in other folders)
